remove build files

--- a/smart-contracts/.env.example
+++ b/smart-contracts/.env.example
@@ -13,4 +13,4 @@ NFT_CONTRACT_NAME=TEST NFT
 NFT_CONTRACT_SYMBOL=TNFT
 ROYALTY_RECIPIENT_ADDRESS=0x...
 ROYALTY_VALUE=250
-TOKEN_BASE_URL=http://localhost/
+TOKEN_BASE_URL=https://nft-marketplace-l2.netlify.app/images/
